--- a/src/FrontEndBundle/Resources/views/partial/_product_tiles.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_product_tiles.html.twig
@@ -5,12 +5,14 @@
       <div class="row">
   {% endif %}
   <div class="col-md-{{ (max_columns / products_in_row) | round }}">
-      <div class="product-tile">
-          {% set productImage = product.imageUrl ?: asset('img/no_image.jpg') %}
-          <img class="product-category-image"  src="{{ productImage }}" alt="{{ product.name }}">
-          <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name|truncate(60) }}</a>
-          <div class="rating-stars">{{ product.rating|rating|raw }}</div>
-          <span class="price">{{ product.price|price|raw }}</span>
+      <div class="panel product-tile">
+          <div class="panel-body">
+              {% set productImage = product.imageUrl ?: asset('img/no_image.jpg') %}
+              <img class="product-category-image"  src="{{ productImage }}" alt="{{ product.name }}">
+              <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name|truncate(60) }}</a>
+              <div class="rating-stars">{{ product.rating|rating|raw }}</div>
+              <span class="price">{{ product.price|price|raw }}</span>
+          </div>
       </div>
   </div>
   {% if i % products_in_row == products_in_row - 1 %}
