--- a/src/BackEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/BackEndBundle/Resources/views/partial/_header.html.twig
@@ -21,6 +21,9 @@
           <li class="{% if 'back_end_category_list'|active %}active{% endif %}">
             <a href="{{ path('back_end_category_list') }}">Categories</a>
           </li>
+          <li class="{% if 'back_end_order_list'|active %}active{% endif %}">
+            <a href="{{ path('back_end_order_list') }}">Orders</a>
+          </li>
           {% if is_granted('ROLE_ADMIN') %}
             <li class="{% if 'back_end_user_list'|active %}active{% endif %}">
               <a href="{{ path('back_end_user_list') }}">Users</a>
